--- a/allowlist.yml
+++ b/allowlist.yml
@@ -6,15 +6,16 @@
 # These are some commonly allowlist entries that I always add.
 apple.com
 bing.com
+brightcove.com
 cloudflare.com
-dell.com
+demdex.net
 discordapp.com
 espncdn.com
 gamepass.com
 ghcr.io
 github.com
 github.io
-gitlab.com
+googleapis.com
 fonts.gstatic.com
 hulu.com
 hulustream.com
@@ -22,16 +23,20 @@ instagram.com
 jetbrains.space
 megaphone.fm
 microsoft.com
+msn.com
 nbcsports.com
-nerdfonts.com
+omtrdc.net
 peacocktv.com
 pinimg.com
 tokens.playmakerservices.com
 scdn.co
 soundcloud.com
 spotify.com
+tidal.com
+typekit.net
 ubuntu.com
 ui.com
+urbanairship.com
 visualstudio.com
 windows.com
 windowsupdate.com
