--- a/allowlist.yml
+++ b/allowlist.yml
@@ -8,6 +8,7 @@ apple.com
 bing.com
 brightcove.com
 cloudflare.com
+dell.com
 demdex.net
 discordapp.com
 espncdn.com
@@ -15,6 +16,7 @@ gamepass.com
 ghcr.io
 github.com
 github.io
+gitlab.com
 googleapis.com
 fonts.gstatic.com
 hulu.com
@@ -25,6 +27,7 @@ megaphone.fm
 microsoft.com
 msn.com
 nbcsports.com
+nerdfonts.com
 omtrdc.net
 peacocktv.com
 pinimg.com
