--- a/allowlist.yml
+++ b/allowlist.yml
@@ -20,6 +20,8 @@ fonts.gstatic.com
 cws-hulu.conviva.com
 ads-e-darwin.hulustream.com
 hulu.hb-api.omtrdc.net
+instagram.com
+graph.facebook.com
 vortex.hulu.com
 ads-v-darwin.hulustream.com
 ads-a-darwin.hulustream.com
