--- a/allowlist.yml
+++ b/allowlist.yml
@@ -4,6 +4,7 @@
 # | ||_|_|_|\_|_.\_. ||_|\___/\_|_.|_\_\
 #[__|            [___|                  
 # These are some commonly allowlist entries that I always add.
+apple.com
 brightcove.com
 cloudflare.com
 dell.com
