--- a/allowlist.yml
+++ b/allowlist.yml
@@ -1,9 +1,12 @@
-#  _                   _            _   
-# [_] _ _ _  ___  ___ | | ___  ___ | |__
-# | || ' ' |/ | '/ . || |/ . \/ | '| / /
-# | ||_|_|_|\_|_.\_. ||_|\___/\_|_.|_\_\
-#[__|            [___|                  
-# These are some commonly whitelisted entries that I always add as wildcards.
+#    _                     _            _    
+#   (_)                   | |          | |   
+#    _ _ __ ___   ___ __ _| | ___   ___| | __
+#   | | '_ ` _ \ / __/ _` | |/ _ \ / __| |/ /
+#   | | | | | | | (_| (_| | | (_) | (__|   < 
+#   | |_| |_| |_|\___\__, |_|\___/ \___|_|\_\
+#  _/ |               __/ |                  
+# |__/               |___/                   
+# I always allow these URLS.
 apple.com
 bing.com
 cloudflare.com
@@ -20,10 +23,12 @@ gitlab.com
 googleapis.com
 fonts.gstatic.com
 doppler.hulu.com
-darwin.hulustream.com
 vortex.hulu.com
+darwin.hulustream.com
+icloud.com
 instagram.com
 intuit.com
+jmcglock.com
 live.com
 megaphone.fm
 microsoft.com
@@ -35,17 +40,21 @@ omtrdc.net
 hulu.hb-api.omtrdc.net
 peacocktv.com
 pinimg.com
+rancher.io
 samsung.com
 scdn.co
 shentel.net
 simplelogin.io
 soundcloud.com
 spotify.com
+tidal.com
 typekit.net
 ubuntu.com
 ui.com
 urbanairship.com
 visualstudio.com
+webullfinance.com
+webullfintech.com
 windows.com
 windowsupdate.com
 xboxlive.com
