--- a/denylist.yml
+++ b/denylist.yml
@@ -1,124 +1,136 @@
-#  _                   _            _   
-# [_] _ _ _  ___  ___ | | ___  ___ | |__
-# | || ' ' | | ' . || | . \ | '|  
-# | ||_|_|_|\_|_.\_. ||_|\___\_|_.|_\_\
-#[__|            [___|                  
-# I always block these URLS
-api.ad.xiaomi.com
-app.chat.xiaomi.net
-data.mistat.xiaomi.com
-data.mistat.intl.xiaomi.com
-data.mistat.india.xiaomi.com
-data.mistat.rus.xiaomi.com
-sdkconfig.ad.xiaomi.com
-sdkconfig.ad.intl.xiaomi.com
-globalapi.ad.xiaomi.com
-www.cdn.ad.xiaomi.com
-tracking.miui.com
-sa.api.intl.miui.com
-tracking.miui.com
-tracking.intl.miui.com
-tracking.india.miui.com
-tracking.rus.miui.com
-metrics.data.hicloud.com
-metrics1.data.hicloud.com
-metrics2.data.hicloud.com
-metrics3.data.hicloud.com
-metrics4.data.hicloud.com
-metrics5.data.hicloud.com 
-logservice.hicloud.com
-logservice1.hicloud.com
-metrics-dra.dt.hicloud.com
-logbak.hicloud.com
-analytics.oneplus.cn
-click.oneplus.cn
-click.oneplus.com
-open.oneplus.net
-ad.samsungadhub.com
-samsungadhub.com
-samsungads.com
-smetrics.samsung.com
-nmetrics.samsung.com
+#    _                     _            _    
+#   (_)                   | |          | |   
+#    _ _ __ ___   ___ __ _| | ___   ___| | __
+#   | | '_ ` _ \ / __/ _` | |/ _ \ / __| |/ /
+#   | | | | | | | (_| (_| | | (_) | (__|   < 
+#   | |_| |_| |_|\___\__, |_|\___/ \___|_|\_\
+#  _/ |               __/ |                  
+# |__/               |___/                   
+# I always block these URLS.
 samsung-com.112.2o7.net
-business.samsungusa.com
-analytics.samsungknox.com
-bigdata.ssp.samsung.com
-analytics-api.samsunghealthcn.com
-config.samsungads.com
+ads-twitter.com
+static.ads-twitter.com
+p16-tiktokcdn-com.akamaized.net
+tiktokcdn-com.akamaized.net
+advertising-api-eu.amazon.com
+amazonaax.com
+adtago.s3.amazonaws.com
+advice-ads.s3.amazonaws.com
+affiliationjs.s3.amazonaws.com
+analyticsengine.s3.amazonaws.com
+amazonclix.com
 metrics.apple.com
 securemetrics.apple.com
 supportmetrics.apple.com
-metrics.icloud.com
-metrics.mzstatic.com
-pagead2.googlesyndication.com
-ads.google.com
-adservice.google.com
-pagead2.googleadservices.com
-googleadservices.com
-static.media.net 
-media.net 
-adservetx.media.net
-doubleclick.net
-fastclick.com
-fastclick.net
-media.fastclick.net
-cdn.fastclick.net
-adtago.s3.amazonaws.com
-analyticsengine.s3.amazonaws.com
-advice-ads.s3.amazonaws.com
-affiliationjs.s3.amazonaws.com
-advertising-api-eu.amazon.com
-amazonaax.com
-amazonclix.com
 assoc-amazon.com
-google-analytics.com
-ssl.google-analytics.com
-hotjar.com 
-mouseflow.com 
-a.mouseflow.com
-freshmarketer.com
-luckyorange.com
-cdn.luckyorange.com 
-w1.luckyorange.com
-upload.luckyorange.net 
-cs.luckyorange.net
-settings.luckyorange.net
-stats.wp.com
-notify.bugsnag.com 
-sessions.bugsnag.com
+ns-1574.awsdns-04.co.uk
+ns-722.awsdns-26.net
+ns-440.awsdns-55.com
+ns-1475.awsdns-56.org
 api.bugsnag.com
 app.bugsnag.com
-browser.sentry-cdn.com
-app.getsentry.com
-pixel.facebook.com
-analytics.facebook.com 
+notify.bugsnag.com
+sessions.bugsnag.com
+youtube.cleverads.vn
+doubleclick.net
 ads.facebook.com
 an.facebook.com
-ads-twitter.com 
-static.ads-twitter.com
-ads-api.twitter.com
-advertising.twitter.com
+analytics.facebook.com
+pixel.facebook.com
+fastclick.com
+fastclick.net
+cdn.fastclick.net
+media.fastclick.net
+freshmarketer.com
+app.getsentry.com
+ads.google.com
+adservice.google.com
+google-analytics.com
+ssl.google-analytics.com
+googleadservices.com
+pagead2.googleadservices.com
+pagead2.googlesyndication.com
+metrics.data.hicloud.com
+metrics-dra.dt.hicloud.com
+logbak.hicloud.com
+logservice.hicloud.com
+hotjar.com
+metrics.icloud.com
 ads.linkedin.com
 analytics.pointdrive.linkedin.com
-ads.pinterest.com 
-log.pinterest.com 
+luckyorange.com
+cdn.luckyorange.com
+cs.luckyorange.net
+settings.luckyorange.net
+upload.luckyorange.net
+media.net
+adservetx.media.net
+static.media.net
+tracking.india.miui.com
+sa.api.intl.miui.com
+tracking.intl.miui.com
+tracking.rus.miui.com
+tracking.miui.com
+mouseflow.com
+muscdn.com
+api2.musical.ly
+api2-16-h2.musical.ly
+api2-21-h2.musical.ly
+log2.musical.ly
+mon.musical.ly
+metrics.mzstatic.com
+analytics.oneplus.cn
+click.oneplus.com
+open.oneplus.net
+ads.pinterest.com
 ads-dev.pinterest.com
-analytics.pinterest.com 
+analytics.pinterest.com
+log.pinterest.com
 trk.pinterest.com
 widgets.pinterest.com
-ads.reddit.com 
-d.reddit.com 
-rereddit.com
+ads.reddit.com
+d.reddit.com
 events.redditmedia.com
-ads.youtube.com 
-youtube.cleverads.vn
+rereddit.com
+nmetrics.samsung.com
+smetrics.samsung.com
+bigdata.ssp.samsung.com
+samsungadhub.com
+ad.samsungadhub.com
+samsungads.com
+config.samsungads.com
+analytics-api.samsunghealthcn.com
+analytics.samsungknox.com
+business.samsungusa.com
+browser.sentry-cdn.com
 tiktok.com
+m.tiktok.com
+www.tiktok.com
 tiktokcdn.com
+v16a.tiktokcdn.com
+v16m.tiktokcdn.com
+v19.tiktokcdn.com
+api.tiktokv.com
+api-h2.tiktokv.com
+api21-h2.tiktokv.com
+ib.tiktokv.com
+log.tiktokv.com
+ads-api.twitter.com
+advertising.twitter.com
+tiktokcdn.com.c.worldfcdn.com
+stats.wp.com
+api.ad.xiaomi.com
+www.cdn.ad.xiaomi.com
+globalapi.ad.xiaomi.com
+sdkconfig.ad.xiaomi.com
+app.chat.xiaomi.net
+data.mistat.india.xiaomi.com
+sdkconfig.ad.intl.xiaomi.com
+data.mistat.intl.xiaomi.com
+data.mistat.xiaomi.com
+data.mistat.rus.xiaomi.com
 ads.yahoo.com
-global.adserver.yahoo.com 
+global.adserver.yahoo.com
 analytics.yahoo.com
 ads.yap.yahoo.com
-yandex.com 
-yandexadexchange.net
-yandex.net
-yandex.ru
+ads.youtube.com
