--- a/allowlist.yml
+++ b/allowlist.yml
@@ -1,29 +1,29 @@
-#    _                     _            _    
-#   (_)                   | |          | |   
-#    _ _ __ ___   ___ __ _| | ___   ___| | __
-#   | | '_ ` _ \ / __/ _` | |/ _ \ / __| |/ /
-#   | | | | | | | (_| (_| | | (_) | (__|   < 
-#   | |_| |_| |_|\___\__, |_|\___/ \___|_|\_\
-#  _/ |               __/ |                  
-# |__/               |___/                   
-# I always allow these URLS.
+#   _                     _            _    
+#  (_)                   | |          | |   
+#   _ _ __ ___   ___ __ _| | ___   ___| | __
+#  | | '_ ` _ \ / __/ _` | |/ _ \ / __| |/ /
+#  | | | | | | | (_| (_| | | (_) | (__|   < 
+#  | |_| |_| |_|\___\__, |_|\___/ \___|_|\_\
+# _/ |               __/ |                  
+#|__/               |___/                             
+# I always allow these URLs.
+ads-fa-darwin.hulustream.com
 amp-api-edge.apps.apple.com
 amp-api-search-edge.apps.apple.com
-smoot.apple.com
+dcf.espn.com
 demdex.net
 discordapp.com
 espncdn.com
-dcf.espn.com
+fonts.gstatic.com
 gamepass.com
 ghcr.io
 github.com
 github.io
 gitlab.com
 googleapis.com
-fonts.gstatic.com
-ads-fa-darwin.hulustream.com
 graph.facebook.com
 graph.instagram.com
+hulu.hb-api.omtrdc.net
 i.instagram.com
 intuit.com
 megaphone.fm
@@ -32,14 +32,17 @@ nbcsports.com
 nerdfonts.com
 nextdns.io
 omtrdc.net
-hulu.hb-api.omtrdc.net
 peacocktv.com
 pinimg.com
 rancher.io
+s.youtube.com
 scdn.co
 simplelogin.io
+smoot.apple.com
 soundcloud.com
 spotify.com
+tesla.com
+tessie.com
 typekit.net
 ubuntu.com
 ui.com
@@ -48,6 +51,3 @@ visualstudio.com
 windows.com
 windowsupdate.com
 xboxlive.com
-s.youtube.com
-tesla.com
-tessie.com
