--- a/denylist.yml
+++ b/denylist.yml
@@ -1,134 +1,83 @@
-#   _                     _            _    
-#  (_)                   | |          | |   
-#   _ _ __ ___   ___ __ _| | ___   ___| | __
-#  | | '_ ` _ \ / __/ _` | |/ _ \ / __| |/ /
-#  | | | | | | | (_| (_| | | (_) | (__|   < 
-#  | |_| |_| |_|\___\__, |_|\___/ \___|_|\_\
-# _/ |               __/ |                  
-#|__/               |___/                 
-# I always block these URLS.
-adc3-launch.adcolony.com
-adfox.yandex.ru
-adfstat.yandex.ru
-adm.hotjar.com
-ads-api.tiktok.com
-ads-api.twitter.com
-ads-sg.tiktok.com
-ads.linkedin.com
-ads.pinterest.com
-ads.tiktok.com
-ads.yahoo.com
-ads.youtube.com
-adservetx.media.net
-adservice.google.com
-adtago.s3.amazonaws.com
-adtech.yahooinc.com
-advice-ads.s3.amazonaws.com
-afs.googlesyndication.com
-analytics-api.samsunghealthcn.com
-analytics-sg.tiktok.com
-analytics.google.com
-analytics.pinterest.com
-analytics.pointdrive.linkedin.com
-analytics.query.yahoo.com
-analytics.s3.amazonaws.com
-analytics.tiktok.com
-analytics.yahoo.com
-analyticsengine.s3.amazonaws.com
-an.facebook.com
-api-adservices.apple.com
-api.ad.xiaomi.com
-api.bugsnag.com
-api.luckyorange.com
-api.mouseflow.com
-app.bugsnag.com
-app.getsentry.com
-appmetrica.yandex.ru
-auction.unityads.unity3d.com
-bdapi-ads.realmemobile.com
-bdapi-in-ads.realmemobile.com
-books-analytics-events.apple.com
-browser.sentry-cdn.com
-business-api.tiktok.com
-careers.hotjar.com
-cdn-test.mouseflow.com
-cdn.luckyorange.com
-cdn.mouseflow.com
-claritybt.freshmarketer.com
-click.googleanalytics.com
-click.oneplus.cn
-config.unityads.unity3d.com
-cs.luckyorange.net
-data.ads.oppomobile.com
-data.mistat.india.xiaomi.com
-data.mistat.rus.xiaomi.com
-data.mistat.xiaomi.com
-events.hotjar.io
-events.reddit.com
-events.redditmedia.com
-events3alt.adcolony.com
-extmaps-api.yandex.net
-freshmarketer.com
-fwtracks.freshmarketer.com
-gemini.yahoo.com
-geo.yahoo.com
+#      ██╗███╗   ███╗ ██████╗ ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗
+#      ██║████╗ ████║██╔════╝██╔════╝ ██║     ██╔═══██╗██╔════╝██║ ██╔╝
+#      ██║██╔████╔██║██║     ██║  ███╗██║     ██║   ██║██║     █████╔╝ 
+# ██   ██║██║╚██╔╝██║██║     ██║   ██║██║     ██║   ██║██║     ██╔═██╗ 
+# ╚█████╔╝██║ ╚═╝ ██║╚██████╗╚██████╔╝███████╗╚██████╔╝╚██████╗██║  ██╗
+# ╚════╝ ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
+# DNS Blocklist for NextDNS
 google-analytics.com
-grs.hicloud.com
-gtm.mouseflow.com
+ssl.google-analytics.com
+analytics.google.com
+click.googleanalytics.com
+app-measurement.com
+analytics.s3.amazonaws.com
+analyticsengine.s3.amazonaws.com
+pagead2.googlesyndication.com
+adservice.google.com
+afs.googlesyndication.com
+pagead2.googleadservices.com
+doubleclick.net
+ad.doubleclick.net
+static.doubleclick.net
+stats.g.doubleclick.net
+mediavisor.doubleclick.net
+pixel.facebook.com
+an.facebook.com
+analytics.tiktok.com
+analytics-sg.tiktok.com
+ads-api.tiktok.com
+ads-sg.tiktok.com
+ads.tiktok.com
+business-api.tiktok.com
+ads.linkedin.com
+analytics.pointdrive.linkedin.com
+static.ads-twitter.com
+ads-api.twitter.com
+metrics.apple.com
+api-adservices.apple.com
 iadsdk.apple.com
+tr.iadsdk.apple.com
+advertising.apple.com
+metrics.icloud.com
+notes-analytics-events.apple.com
+books-analytics-events.apple.com
+weather-analytics-events.apple.com
+mouseflow.com
+api.mouseflow.com
+cdn.mouseflow.com
+tools.mouseflow.com
+gtm.mouseflow.com
+hotjar.com
+events.hotjar.io
+script.hotjar.com
 identify.hotjar.com
 insights.hotjar.com
-iot-eu-logser.realme.com
-iot-logser.realme.com
-log.byteoversea.com
-log.fc.yahoo.com
-log.pinterest.com
-logbak.hicloud.com
-logservice.hicloud.com
-logservice1.hicloud.com
-luckyorange.com
-m.doubleclick.net
-media.net
-mediavisor.doubleclick.net
-metrics.data.hicloud.com
-metrics.icloud.com
-metrics.mzstatic.com
-metrics2.data.hicloud.com
-metrika.yandex.ru
-mouseflow.com
-nmetrics.samsung.com
-notes-analytics-events.apple.com
-notify.bugsnag.com
-o2.mouseflow.com
-offerwall.yandex.net
-open.oneplus.net
-pagead2.googleadservices.com
-pagead2.googlesyndication.com
-partnerads.ysm.yahoo.com
-pixel.facebook.com
-realtime.luckyorange.com
-samsung-com.112.2o7.net
-samsungads.com
-script.hotjar.com
-sdkconfig.ad.intl.xiaomi.com
-sdkconfig.ad.xiaomi.com
-sessions.bugsnag.com
-settings.luckyorange.net
-smetrics.samsung.com
-ssl.google-analytics.com
-static.ads-twitter.com
-static.doubleclick.net
-static.media.net
-stats.g.doubleclick.net
-stats.wp.com
 surveys.hotjar.com
-tools.mouseflow.com
-tracking.rus.miui.com
-trk.pinterest.com
-udc.yahoo.com
-udcm.yahoo.com
-upload.luckyorange.net
-w1.luckyorange.com
-weather-analytics-events.apple.com
-webview.unityads.unity3d.com
+adm.hotjar.com
+notify.bugsnag.com
+sessions.bugsnag.com
+api.bugsnag.com
+app.bugsnag.com
+browser.sentry-cdn.com
+app.getsentry.com
+advice-ads.s3.amazonaws.com
+adtago.s3.amazonaws.com
+advertising-api-eu.amazon.com
+api.ad.xiaomi.com
+sdkconfig.ad.xiaomi.com
+data.mistat.xiaomi.com
+data.mistat.india.xiaomi.com
+data.mistat.rus.xiaomi.com
+globalapi.ad.xiaomi.com
+nmetrics.samsung.com
+smetrics.samsung.com
+samsungads.com
+samsung-com.112.2o7.net
+media.net
+static.media.net
+adservetx.media.net
+adcolony.com
+ads30.adcolony.com
+adc3-launch.adcolony.com
+events3alt.adcolony.com
 wd.adcolony.com
