--- a/allowlist.yml
+++ b/allowlist.yml
@@ -1,53 +1,55 @@
-#   _                     _            _    
-#  (_)                   | |          | |   
-#   _ _ __ ___   ___ __ _| | ___   ___| | __
-#  | | '_ ` _ \ / __/ _` | |/ _ \ / __| |/ /
-#  | | | | | | | (_| (_| | | (_) | (__|   < 
-#  | |_| |_| |_|\___\__, |_|\___/ \___|_|\_\
-# _/ |               __/ |                  
-#|__/               |___/                             
-# I always allow these URLs.
-ads-fa-darwin.hulustream.com
+#      ██╗███╗   ███╗ ██████╗ ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗
+#      ██║████╗ ████║██╔════╝██╔════╝ ██║     ██╔═══██╗██╔════╝██║ ██╔╝
+#      ██║██╔████╔██║██║     ██║  ███╗██║     ██║   ██║██║     █████╔╝ 
+# ██   ██║██║╚██╔╝██║██║     ██║   ██║██║     ██║   ██║██║     ██╔═██╗ 
+# ╚█████╔╝██║ ╚═╝ ██║╚██████╗╚██████╔╝███████╗╚██████╔╝╚██████╗██║  ██╗
+# ╚════╝ ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
+# DNS Allowlist for NextDNS
+apple.com
 amp-api-edge.apps.apple.com
 amp-api-search-edge.apps.apple.com
-dcf.espn.com
-demdex.net
-discordapp.com
-espncdn.com
-fonts.gstatic.com
-gamepass.com
+smoot.apple.com
+microsoft.com
+visualstudio.com
+windows.com
+windowsupdate.com
+xboxlive.com
 ghcr.io
 github.com
 github.io
 gitlab.com
 googleapis.com
+discordapp.com
 graph.facebook.com
 graph.instagram.com
-hulu.hb-api.omtrdc.net
 i.instagram.com
-intuit.com
+pinimg.com
+soundcloud.com
+spotify.com
+scdn.co
+s.youtube.com
+ads-fa-darwin.hulustream.com
+hulu.hb-api.omtrdc.net
 megaphone.fm
-microsoft.com
 nbcsports.com
+peacocktv.com
+dcf.espn.com
+espncdn.com
+gamepass.com
+demdex.net
+fonts.gstatic.com
+intuit.com
 nerdfonts.com
 nextdns.io
 omtrdc.net
-peacocktv.com
-pinimg.com
 rancher.io
-s.youtube.com
-scdn.co
 simplelogin.io
-smoot.apple.com
-soundcloud.com
-spotify.com
-tesla.com
-tessie.com
 typekit.net
 ubuntu.com
 ui.com
 urbanairship.com
-visualstudio.com
-windows.com
-windowsupdate.com
-xboxlive.com
+tesla.com
+tesla.services
+tessie.com
+akamai.net
+cloudflare.com
